# lambda-etl

./: .env.example  .gitignore  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
Dockerfiles/: Dockerfile.dev  Dockerfile.test
app/: main.py
app/core/: config.py  csv_writer.py  s3_uploader.py  schema.py
cdk/: app.py  cdk.json
cdk/stacks/: lambda_etl_stack.py
scripts/: run_lint.sh  run_local.py
tests/: conftest.py  test_core.py  test_main.py
