[tool.poetry]
name = "lambda-etl"
version = "0.1.0"
description = "ETL processor with AWS Lambda"
authors = ["you@example.com"]

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.34.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "app"
