[tool.poetry]
name = "lambda-etl"
version = "0.1.0"
description = "ETL processor with AWS Lambda"
authors = ["you@example.com"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^6.1.1"
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"